content/renderer/media_capture_from_element/canvas_capture_handler_unittest.cc
@@ -55,6 +55,7 @@ class CanvasCaptureHandlerTest
         blink::WebSize(kTestCanvasCaptureWidth, kTestCanvasCaptureHeight),
         kTestCanvasCaptureFramesPerSecond, message_loop_.task_runner(),
         &track_);
+    base::RunLoop().RunUntilIdle();
   }
 
   void TearDown() override {
